Fix scrollbar background in dark mode

--- a/Resources/ReleaseNotesColorStyle.css
+++ b/Resources/ReleaseNotesColorStyle.css
@@ -2,6 +2,7 @@
     html {
         color: white;
         background: transparent;
+        color-scheme: dark;
     }
     :link {
         color: #419CFF;
